Use virtual threads
Virtual threads allow to simplify a bit the generator code and tests.

Also, use a few modern Java constructs

Signed-off-by: Thomas Segismont <tsegismont@gmail.com>